--- a/frontend/src/app/pages/admin-dodaj-predmet/admin-dodaj-predmet.component.html
+++ b/frontend/src/app/pages/admin-dodaj-predmet/admin-dodaj-predmet.component.html
@@ -1,4 +1,4 @@
-<div 
+<div
   class="min-h-screen bg-cover bg-center bg-fixed flex flex-col items-center justify-center relative"
   style="background-image: url('pozadina.jpg');"
 >
@@ -8,9 +8,9 @@
   </div>
 
   <!-- Forma -->
-  <form 
-    [formGroup]="predmetForm" 
-    (ngSubmit)="onSubmit()" 
+  <form
+    [formGroup]="predmetForm"
+    (ngSubmit)="onSubmit()"
     class="w-full max-w-md mx-auto p-6 bg-white rounded-xl shadow-lg space-y-5 z-10 mt-50"
   >
     <h2 class="text-xl font-bold text-gray-800 text-center">
@@ -65,6 +65,8 @@
         formControlName="dan"
         class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
         placeholder="Unesite dan"
+        min="1"
+        max="7"
       />
     </div>
 
