--- a/frontend/src/app/pages/osoblje/dodaj-osoblje/dodaj-osoblje.component.html
+++ b/frontend/src/app/pages/osoblje/dodaj-osoblje/dodaj-osoblje.component.html
@@ -98,7 +98,7 @@
                     class="mt-1 w-full rounded-xl border bg-white p-3 text-sm shadow-sm outline-none transition
                            focus:border-blue-500 focus:ring-2 focus:ring-blue-500"
                     [ngClass]="{'border-gray-300': !fakCtrl.invalid, 'border-red-500 ring-2 ring-red-500': fakCtrl.invalid && fakCtrl.touched}">
-              <option *ngFor="let f of fakulteti" [value]="f.id">{{ f.naziv }}</option>
+              <option *ngFor="let f of fakulteti" [value]="f.id">{{ f.opis}}</option>
             </select>
             <span *ngIf="fakCtrl.errors?.['required'] && fakCtrl.touched" class="text-red-500 text-xs">Izaberite fakultet.</span>
           </label>
