Frontend dodat dizajn

--- a/frontend/src/app/pages/admin-dodaj-studiski/admin-dodaj-studiski.component.html
+++ b/frontend/src/app/pages/admin-dodaj-studiski/admin-dodaj-studiski.component.html
@@ -69,3 +69,6 @@
     </form>
   </div>
 </div>
+<footer class="w-full bg-gray-900 text-white py-2 text-center border border-transparent">
+ Univerzitet © 2025 
+</footer>
