--- a/frontend/src/app/pages/admin-sifarnik/admin-sifarnik.component.html
+++ b/frontend/src/app/pages/admin-sifarnik/admin-sifarnik.component.html
@@ -52,3 +52,7 @@
     <p><strong>Generated Password:</strong> <span class="font-mono text-green-600">{{ genpw }}</span></p>
   </div>
 </div>
+</div>
+<footer class="w-full bg-gray-900 text-white py-2 text-center border border-transparent">
+ Univerzitet © 2025 
+</footer>
