--- a/frontend/src/app/pages/dodaj-zavrsnirad/dodaj-zavrsnirad.component.html
+++ b/frontend/src/app/pages/dodaj-zavrsnirad/dodaj-zavrsnirad.component.html
@@ -113,4 +113,9 @@
     <button type="submit">Pretraži nastavnike</button>
   </form>
 </div>
+</div>
+</div>
 
+<footer class="w-full bg-gray-900 text-white py-2 text-center border border-transparent">
+ Univerzitet © 2025 
+</footer>
