--- a/frontend/src/app/pages/nastavnik/evaluacije/evaluacije.component.html
+++ b/frontend/src/app/pages/nastavnik/evaluacije/evaluacije.component.html
@@ -6,7 +6,7 @@
   <div class="absolute top-16 flex justify-center w-full pointer-events-none">
     <img src="slika1.png" alt="Grb" class="w-48 h-auto opacity-30 drop-shadow-2xl">
   </div>
-  <div class="relative z-10 mt-60 w-full"></div>
+  <div class="relative z-10 mt-20 w-full"></div>
     <div class="container mx-auto" >
       <h2>Instrumenti evaluacije</h2>
   
@@ -44,3 +44,6 @@
     </div>
   </div>
 </div>
+<footer class="w-full bg-gray-900 text-white py-2 text-center border border-transparent">
+ Univerzitet © 2025 
+</footer>
