--- a/frontend/src/app/pages/nastavnik/studenti-predmeta/studenti-predmeta.component.html
+++ b/frontend/src/app/pages/nastavnik/studenti-predmeta/studenti-predmeta.component.html
@@ -23,3 +23,7 @@
     <p>Nema studenata upisanih na ovaj predmet.</p>
   </ng-template>
 </div>
+</div>
+<footer class="w-full bg-gray-900 text-white py-2 text-center border border-transparent">
+ Univerzitet © 2025 
+</footer>
