--- a/frontend/src/app/pages/admin-dodaj-predmet/admin-dodaj-predmet.component.html
+++ b/frontend/src/app/pages/admin-dodaj-predmet/admin-dodaj-predmet.component.html
@@ -78,3 +78,6 @@
     </button>
   </form>
 </div>
+<footer class="w-full bg-gray-800 text-white py-2 text-center border border-transparent">
+ Univerzitet © 2025 
+</footer>
