--- a/frontend/src/app/pages/nastavnik/termini/termini.component.html
+++ b/frontend/src/app/pages/nastavnik/termini/termini.component.html
@@ -7,7 +7,7 @@
     <img src="slika1.png" alt="Grb" class="w-48 h-auto opacity-30 drop-shadow-2xl">
   </div>
 
-<div class="relative z-10 w-full max-w-md p-6 mt-60 bg-white/100 border border-white/50 rounded-2xl shadow-xl backdrop-blur-md">
+<div class="relative z-10 w-full max-w-md p-6 mt-10 bg-white/100 border border-white/50 rounded-2xl shadow-xl backdrop-blur-md">
   <h2>Termini</h2>
 
   <!-- Dodavanje -->
@@ -45,3 +45,8 @@
     <p>Nema termina za prikaz.</p>
   </div>
 </div>
+</div>
+
+<footer class="w-full bg-gray-900 text-white py-2 text-center border border-transparent">
+ Univerzitet © 2025 
+</footer>
