--- a/frontend/src/app/pages/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/pages/nav-bar/nav-bar.component.html
@@ -1,219 +1,143 @@
-<div class=" relative flex flex-col items-center bg-cover bg-center bg-fixed"
-style="background-image: url('pozadina.jpg');">
-  <div class="absolute inset-0 flex justify-center items-center pointer-events-none">
-    <img src="slika1.png" alt="Grb" class="w-48 h-auto opacity-30 drop-shadow-2xl">
+<header class="w-full bg-gray-900 text-white shadow-md fixed top-0 left-0 z-50">
+  <div class="max-w-screen-2xl mx-auto flex items-center px-6 py-4 w-full">
+    <!-- Logo / naziv univerziteta -->
+    <h1 class="text-xl font-bold cursor-pointer" (click)="goToPrikaz()">Univerzitet</h1>
+
+    <!-- Glavni meni -->
+    <nav class="flex flex-wrap items-center space-x-4 ml-6">
+      <!-- Univerzitet -->
+      <button (click)="goToUniverziteti()"
+              class="px-4 py-2 bg-gray-900 text-white rounded hover:bg-gray-400 transition-colors">
+        O nama
+      </button>
+
+      <!-- Biblioteka Dropdown -->
+      <div class="relative" (mouseleave)="onMenuLeave()" (mouseenter)="onMenuEnter()">
+        <button (click)="showBiblioteka = !showBiblioteka"
+                class="px-4 py-2 bg-gray-900 text-white rounded hover:bg-gray-400 transition-colors">
+          Biblioteka ▼
+        </button>
+        <div *ngIf="showBiblioteka"
+             class="absolute mt-2 w-48 bg-white text-black border rounded shadow-lg">
+          <button (click)="goToBiblioteka()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Biblioteka</button>
+          <button (click)="vrati()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Vrati knjigu</button>
+          <button (click)="zahtjevi()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Zahtjevi knjiga</button>
+        </div>
+      </div>
+
+      <!-- ROLE_NASTAVNIK -->
+      <div *ngIf="authService.hasRole('ROLE_NASTAVNIK')" class="flex items-center space-x-2">
+        <app-notifikacije></app-notifikacije>
+        <button (click)="goToNastavnikPredmeti()"
+                class="px-4 py-2 bg-gray-900 text-white rounded hover:bg-gray-400">
+          Predmeti
+        </button>
+        <button (click)="goToZavrsniRadovi()"
+                class="px-4 py-2 bg-gray-900 text-white rounded hover:bg-gray-400">
+          Završni radovi
+        </button>
+      </div>
+
+      <!-- ROLE_STUDENT -->
+      <div *ngIf="authService.hasRole('ROLE_STUDENT')" class="relative" (mouseleave)="onMenuLeave()" (mouseenter)="onMenuEnter()">
+        <app-notifikacije></app-notifikacije>
+        <button (click)="showStudentmenu = !showStudentmenu"
+                class="px-4 py-2 bg-gray-900 text-white rounded hover:bg-gray-500">
+          Student ▼
+        </button>
+        <div *ngIf="showStudentmenu"
+             class="absolute mt-2 w-48 bg-white text-black border rounded shadow-lg">
+          <button (click)="goToStudentPredmet()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Predmeti</button>
+          <button (click)="goToPrijaviIspit()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Prijava ispita</button>
+          <button (click)="gotoIstorijaIspita()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Ishod ispita</button>
+        </div>
+      </div>
+
+      <!-- ROLE_OSOBLJE -->
+      <div *ngIf="authService.hasRole('ROLE_OSOBLJE')" class="relative" (mouseleave)="onMenuLeave()" (mouseenter)="onMenuEnter()">
+        <app-notifikacije></app-notifikacije>
+        <button (click)="showOsobljeMenu = !showOsobljeMenu"
+                class="px-4 py-2 bg-gray-300 text-black rounded hover:bg-gray-400">
+          Osoblje ▼
+        </button>
+        <div *ngIf="showOsobljeMenu"
+             class="absolute mt-2 w-56 bg-white text-black border rounded shadow-lg">
+          <button (click)="goToDodajDokumenta()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj dokumenta</button>
+          <button (click)="goToDodajRaspored()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj raspored</button>
+          <button (click)="goToDodajKolokvijum()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj kolokvijum</button>
+          <button (click)="goToInventar()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Inventar</button>
+          <button (click)="goToDodajOpsta()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj obavještenja</button>
+          <button (click)="goToOpsta()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Pogledaj obavještenja</button>
+          <button (click)="goToPregledKolokvijuma()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Kolokvijumi datumi</button>
+          <button (click)="goToPrikaziDokumente()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dokumenti izdate</button>
+        </div>
+      </div>
+
+      <!-- ROLE_ADMIN -->
+      <div *ngIf="authService.hasRole('ROLE_ADMIN')" class="relative flex items-center space-x-2">
+  <app-notifikacije></app-notifikacije>
+
+  <!-- Prikaz Dropdown -->
+  <div class="relative" (mouseleave)="onMenuLeave()" (mouseenter)="onMenuEnter()">
+    <button (click)="showPrikaz = !showPrikaz" 
+            class="px-4 py-2 bg-gray-900 text-white rounded hover:bg-gray-500 transition-colors">
+      Prikaz ▼
+    </button>
+    <div *ngIf="showPrikaz"
+         class="absolute mt-2 w-48 bg-white text-black border rounded shadow-lg max-h-80 overflow-auto z-50">
+      <button (click)="goToNastavniciPrikaz()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Prikaži nastavnike</button>
+      <button (click)="goToStudenti()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Prikaži studente</button>
+    </div>
   </div>
-<div
-  class="absolute top-0 left-0 w-full flex flex-wrap justify-content p-4 space-x-2 z-50 bg-transparent"
->
-  <button *ngIf="isLogged()"
-        (click)="onLogout()"
-        class="absolute top-4 right-4 bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition-colors">
-  LogOut
-</button>
 
-
-  <button *ngIf="!isLogged()" (click)="goToLogin()"
-    class="px-5 py-2 bg-gray-300 rounded hover:bg-gray-500 transition-colors">
-    Login
+  <!-- Dodaj Dropdown -->
+   <button (click)="goToSifarnik()"
+          class="px-4 py-2 bg-gray-900 text-white rounded hover:bg-gray-500 transition-colors">
+    Šifarnik
   </button>
+  
 
-  <button *ngIf="!isLogged()" (click)="goToRegister()"
-    class="px-5 py-2 bg-gray-300 rounded hover:bg-gray-500 transition-colors">
-    Register
-  </button>
-
-<button *ngIf="isLogged()" (click)="goToEdit()"
-  class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 transition-colors">
-  Uredi Profil
-</button>
-
-  <button (click)="goToUniverziteti()"
-    class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 transition-colors">
-    Univerziteti
-  </button>
-
- <div class="relative inline-block text-left"
- (mouseleave)="onMenuLeave()"
- (mouseenter)="onMenuEnter()">
-    <button (click)="showBiblioteka= !showBiblioteka"
-      class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 transition-colors">
-      Biblioteka Menu ▼
-
+  <!-- Šifarnik dugme -->
+   <div class="relative" (mouseleave)="onMenuLeave()" (mouseenter)="onMenuEnter()">
+    <button (click)="showDodaj = !showDodaj" 
+            class="px-4 py-2 bg-gray-900 text-white rounded hover:bg-gray-500 transition-colors">
+      Dodaj ▼
     </button>
-
-    <div *ngIf="showBiblioteka"
-      class="absolute mt-2 w-48 bg-white border rounded shadow-lg z-50">
-      <button (click)="goToBiblioteka()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Biblioteka
-      </button>
-      <button (click)="vrati()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Vrati knjigu
-      </button>
-      <button (click)="zahtjevi()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Zahtjevi knjiga
-      </button>
-    </div>
-  </div>
-  <div *ngIf="authService.hasRole('ROLE_NASTAVNIK')" class="relative inline-block text-left">
-    <app-notifikacije></app-notifikacije>
-    <button (click)="goToNastavnikPredmeti()"
-      class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 transition-colors translate-x-[10px]">
-      Predmeti
-    </button>
-    <button (click)="goToZavrsniRadovi()"
-      class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 transition-colors translate-x-[20px]">
-      Zavrsni radovi
-    </button>
-  </div>
-
-  <div *ngIf="authService.hasRole('ROLE_STUDENT')" class="relative inline-block text-left"
-  (mouseleave)="onMenuLeave()"
-  (mouseenter)="onMenuEnter()">
-    <app-notifikacije></app-notifikacije>
-    <button (click)="showStudentmenu= !showStudentmenu"
-      class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 transition-colors translate-x-[10px]">
-      Student Menu ▼
-    </button>
-
-    <div *ngIf="showStudentmenu"
-      class="absolute mt-2 w-48 bg-white border rounded shadow-lg z-50"
-      (mouseleave)="onMenuLeave()"
-      (mouseenter)="onMenuEnter()">
-      <button (click)="goToStudentPredmet()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Predmeti
-      </button>
-      <button (click)="goToPrijaviIspit()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Prijava Ispita
-      </button>
-      <button (click)="gotoIstorijaIspita()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        IshodIspita
-      </button>
+    <div *ngIf="showDodaj"
+         class="absolute mt-2 w-56 bg-white text-black border rounded shadow-lg max-h-80 overflow-auto z-50">
+      <button (click)="goToDodajPredmet()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj predmete</button>
+      <button (click)="goToDodajRok()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj rok</button>
+      <button (click)="goToDodajFaks()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj fakultet</button>
+      <button (click)="goToDodajUni()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj univerzitet</button>
+      <button (click)="goToDodajOsoblje()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj osoblje</button>
+      <button (click)="goToDodajProgram()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj program</button>
+      <button (click)="goToDodajPow()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj admina</button>
+      <button (click)="goToDodajNastavnik()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj nastavnika</button>
+      <button (click)="dodajZavrsni()" class="block w-full text-left px-4 py-2 hover:bg-gray-200">Dodaj završni rad</button>
     </div>
   </div>
 
-  <div *ngIf="authService.hasRole('ROLE_OSOBLJE')" class="relative inline-block text-left"
-  (mouseleave)="onMenuLeave()"
-  (mouseenter)="onMenuEnter()">
-    <app-notifikacije></app-notifikacije>
-    <button (click)="showOsobljeMenu= !showOsobljeMenu"
-      class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 transition-colors translate-x-[10px]">
-      Osoblje Menu ▼
-    </button>
-
-    <div *ngIf="showOsobljeMenu"
-      class="absolute mt-2 w-48 bg-white border rounded shadow-lg z-50"
-      (mouseleave)="onMenuLeave()"
-      (mouseenter)="onMenuEnter()">
-      <button (click)="goToDodajDokumenta()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-       Dodaj Dokumenta
-      </button>
-      <button (click)="goToDodajRaspored()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj raspored
-      </button>
-      <button (click)="goToDodajKolokvijum()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj kolokvujim
-      </button>
-      <button (click)="goToInventar()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Inventar
-      </button>
-
-      <button (click)="goToDodajOpsta()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj opsta obavjestenja
-      </button>
-      <button (click)="goToOpsta()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        pogledaj opsta obavjestenja
-      </button>
-      <button (click)="goToPregledKolokvijuma()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        pogledaj kolokvijume datume // ovov ide van ovoga odje je samo dok testiram brze je
-      </button>
-      <button (click)="goToPrikaziDokumente()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        pogledaj Dokumente izdate// ovo treba za svakog uzera da bude vidlivo sad je samo odje jer testiram
-      </button>
-    </div>
-  </div>
-
-  <div *ngIf="authService.hasRole('ROLE_ADMIN')" class="relative inline-block text-left"
-  (mouseleave)="onMenuLeave()"
-  (mouseenter)="onMenuEnter()">
-    <app-notifikacije></app-notifikacije>
-    <button (click)="showAdmin= !showAdmin"
-      class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 transition-colors translate-x-[10px]">
-      Admin Menu ▼
-    </button>
-
-    <div *ngIf="showAdmin"
-      class=" absolute left-0 top-full mt-2 w-48 bg-white border rounded shadow-lg z-50"
-      (mouseleave)="onMenuLeave()"
-      (mouseenter)="onMenuEnter()">
-      <button (click)="goToNastavniciPrikaz()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-       Prikazi Nastavnike
-      </button>
-      <button (click)="goToStudenti()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-       Prikazi Studente
-      </button>
-      <button (click)="goToDodajPredmet()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj Predmete
-      </button>
-      <button (click)="goToDodajRok()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj Rok
-      </button>
-      <button (click)="goToDodajFaks()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj Fakultet
-      </button>
-      <button (click)="goToDodajUni()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj Univerzitet
-      </button>
-      <button (click)="goToDodajOsoblje()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj Osoblje
-      </button>
-      <button (click)="goToDodajProgram()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj Program
-      </button>
-      <button (click)="goToDodajRok()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj ispitni rok
-      </button>
-      <button (click)="goToDodajPow()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj Admin
-      </button>
-      <button (click)="goToDodajNastavnik()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj nastavnika
-      </button>
-      <button (click)="goToSifarnik()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Sifarnik
-      </button>
-      <button (click)="dodajZavrsni()"
-        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj Zavrsni Rad
-      </button>
-    </div>
-  </div>
-
+  
 </div>
+
+    </nav>
+
+    <!-- Login / Register / LogOut dugmad skroz desno -->
+    <div class="ml-auto flex space-x-2">
+      <button *ngIf="!isLogged()" (click)="goToLogin()"
+              class="px-4 py-2 bg-gray-900 text-white rounded hover:bg-gray-500 transition-colors">
+        Login
+      </button>
+      <button *ngIf="!isLogged()" (click)="goToRegister()"
+              class="px-4 py-2 bg-gray-900 text-white-bold rounded hover:bg-gray-500 transition-colors">
+        Register
+      </button>
+      <button *ngIf="isLogged()" (click)="onLogout()"
+              class="bg-gray-900 text-white px-4 py-2 rounded-md hover:bg-red-700 transition-colors">
+        LogOut
+      </button>
+    </div>
+  </div>
+</header>
+
 
