--- a/frontend/src/app/pages/prijavi-ispit/prijavi-ispit.component.html
+++ b/frontend/src/app/pages/prijavi-ispit/prijavi-ispit.component.html
@@ -72,4 +72,7 @@
   </div>
   </form>
 </div>
-
+</div>
+<footer class="w-full bg-gray-900 text-white py-2 text-center border border-transparent">
+ Univerzitet © 2025 
+</footer>
