--- a/frontend/src/app/pages/prikazi-program/prikazi-program.component.html
+++ b/frontend/src/app/pages/prikazi-program/prikazi-program.component.html
@@ -44,3 +44,7 @@
     <p class="text-gray-500">Nema predmeta za ovaj program.</p>
   </ng-template>
 </div>
+</div>
+<footer class="w-full bg-gray-900 text-white py-2 text-center border border-transparent">
+ Univerzitet © 2025 
+</footer>
