--- a/frontend/src/app/pages/vrati/vrati.component.html
+++ b/frontend/src/app/pages/vrati/vrati.component.html
@@ -108,3 +108,7 @@
   Nema podataka.
 </div>
 </div>
+</div>
+<footer class="w-full bg-gray-900 text-white py-2 text-center border border-transparent">
+ Univerzitet © 2025 
+</footer>
