--- a/frontend/src/app/pages/dodaj-slusanje-predmeta/dodaj-slusanje-predmeta.component.html
+++ b/frontend/src/app/pages/dodaj-slusanje-predmeta/dodaj-slusanje-predmeta.component.html
@@ -1,3 +1,11 @@
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h2>Izaberi Program</h2>
 <select [(ngModel)]="izabraniProgramId" (change)="izaberiProgram(izabraniProgramId!)">
   <option *ngFor="let p of programi" [value]="p.id">{{ p.naziv }}</option>
 </select>
